--- a/Resources/Base.lproj/Main.storyboard
+++ b/Resources/Base.lproj/Main.storyboard
@@ -1395,7 +1395,7 @@
                                                         <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     </state>
                                                     <connections>
-                                                        <action selector="rate" destination="2hT-yA-Spg" eventType="touchUpInside" id="pdC-Eh-Npo"/>
+                                                        <action selector="rate" destination="2hT-yA-Spg" eventType="touchUpInside" id="0VH-df-Z4t"/>
                                                     </connections>
                                                 </button>
                                             </subviews>
